--- a/cards/less/page_profile_settings.less
+++ b/cards/less/page_profile_settings.less
@@ -66,7 +66,7 @@ body.page-profile-settings{
                     margin-bottom: 5px;
                 }
                 input{
-                    margin-bottom: 5px;
+                    margin-bottom: 0;
                 }
                 .field{
                     &.firstname, &.lastname, &.middlename{
@@ -81,6 +81,50 @@ body.page-profile-settings{
                 input[type="submit"]{
                     margin-right: 20px;
                     margin-top: 20px;
+                }
+                .field{
+                    margin-bottom: 10px;
+                    &.gender{
+                        width: 48%;
+                        .select2-container{
+                            width: 100% !important;
+                        }
+                    }
+                    &.birthdate{
+                        .day{
+                            float: left;
+                            width: 25%;
+                            margin-right: 3%;
+                        }
+                        .month{
+                            float: left;
+                            width: 44%;
+                            margin-right: 3%;
+                        }
+                        .year{
+                            float: left;
+                            width: 25%;
+                        }
+                        .select2-container{
+                            width: 100% !important;
+                        }
+                    }
+                    &.country, &.city{
+                        float: left;
+                        width: 48% !important;
+                        margin-right: 4%;
+                        .select2-container{
+                            width: 100% !important;
+                        }
+                        &.city{
+                            margin-right: 0;
+                        }
+                    }
+                    &.information{
+                        textarea{
+                            height: 100px;
+                        }
+                    }
                 }
             }
         }
