--- a/cards/less/global.less
+++ b/cards/less/global.less
@@ -300,11 +300,11 @@ header.header {
         }
     }
 }
-.page-mainpage footer.footer{
-    .top{
-        background: none;
-    }
-    .bottom{
-        background: none;
-    }
-}
+// .page-mainpage footer.footer{
+//     .top{
+//         background: none;
+//     }
+//     .bottom{
+//         background: none;
+//     }
+// }
