Страница восстановления пароля и регистрации

--- a/cards/less/global.less
+++ b/cards/less/global.less
@@ -300,11 +300,11 @@ header.header {
         }
     }
 }
-// .page-mainpage footer.footer{
-//     .top{
-//         background: none;
-//     }
-//     .bottom{
-//         background: none;
-//     }
-// }
+body.page-password-recovery footer.footer, body.page-sign-up footer.footer{
+    .top{
+        background: none;
+    }
+    .bottom{
+        background: none;
+    }
+}
