Слайдер на главной

--- a/cards/less/mainpage.less
+++ b/cards/less/mainpage.less
@@ -39,10 +39,11 @@ body.page-mainpage{
         .slider{
             padding-bottom: 50px;
             .wrapper{
+                max-width:none;
                 .item{
                     float: left;
-                    width: 23%;
-                    margin-left: 2%;
+                    width: 220px;
+                    margin-left: 20px;
                     margin-bottom: 20px;
                     &.first-of-row{
                         margin-left: 0;
