--- a/cards/less/mainpage.less
+++ b/cards/less/mainpage.less
@@ -23,6 +23,9 @@ body.page-mainpage{
         text-align: center;
         font:500 1.8rem Roboto;
     }
+    .header{
+        
+    }
     .content{
         background: url('../images/mainpage-bg.jpg') center center no-repeat;
         background-size:cover;
@@ -477,38 +480,38 @@ body.page-password-recovery, body.page-sign-up{
             }
         }
     }
-    footer.footer{
-        color:@white;
-        font-size:1.4rem;
-        font-weight:500;
-        margin-top: 50px;
-        margin-bottom: 20px;
-        overflow: hidden;
-        .copyright{
-            float: left;
-            margin-left: 30px;
-            p{
-                line-height: 155%;
-            }
-        }
-        .right{
-            float: right;
-            margin-right: 30px;
-            text-align: right;
-            ul{
-                margin-top: 35px;
-                li{
-                    float: left;
-                    margin-left: 20px;
-                    a{
-                        &:hover{
-                            text-decoration: underline;
-                        }
-                    }
-                }
-            }
-        }
-    }
+    // footer.footer{
+    //     color:@white;
+    //     font-size:1.4rem;
+    //     font-weight:500;
+    //     margin-top: 50px;
+    //     margin-bottom: 20px;
+    //     overflow: hidden;
+    //     .copyright{
+    //         float: left;
+    //         margin-left: 30px;
+    //         p{
+    //             line-height: 155%;
+    //         }
+    //     }
+    //     .right{
+    //         float: right;
+    //         margin-right: 30px;
+    //         text-align: right;
+    //         ul{
+    //             margin-top: 35px;
+    //             li{
+    //                 float: left;
+    //                 margin-left: 20px;
+    //                 a{
+    //                     &:hover{
+    //                         text-decoration: underline;
+    //                     }
+    //                 }
+    //             }
+    //         }
+    //     }
+    // }
     #authorization-window, #registration-window, #forgot-password-window{
         padding-bottom: 0;
         &#forgot-password-window{
