Страницы профиль участника, список консультантов, мои уведомления

--- a/consult/less/global.less
+++ b/consult/less/global.less
@@ -66,6 +66,7 @@ header.header {
     }
     .sign-in {
         float: right;
+        margin-top: 3px;
         &:hover{
         }
         &.btn{
@@ -149,7 +150,7 @@ header.header {
     }
     .mainmenu {
         float: right;
-        margin:9px 0;
+        margin: 13px 0;
         li {
             float: left;
             text-transform: uppercase;
