--- a/consult/less/interface.less
+++ b/consult/less/interface.less
@@ -247,7 +247,7 @@ input[type="text"], textarea, input[type="password"]{
         background-color:#ffd9d9;
     }
 }
-.field{
+.field.required{
     span{
         display: none;
     }
