--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -7,3 +7,6 @@
 @import url('cheat-sheet.less');
 @import url('module_calendar.less');
 @import url('schedule.less');
+@import url('page_notifications.less');
+@import url('page_participiant_profile.less');
+@import url('page_consultant_list.less');
