--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -3311,4 +3311,200 @@ body.page-consultant-list .wrapper .search-results .result a#sign-up-to-consult 
   padding: 9px 7px 7px 7px;
   margin-top: 20px;
 }
+/* line 3, page_question_list.less */
+body.page-question-list .wrapper .dialogues {
+  float: left;
+  width: 40%;
+  margin-top: 20px;
+  padding: 0;
+}
+/* line 8, page_question_list.less */
+body.page-question-list .wrapper .dialogues .padding-container {
+  padding: 20px;
+}
+/* line 11, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts {
+  height: 600px;
+}
+/* line 13, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact {
+  width: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+/* line 20, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact .photo-container {
+  float: left;
+  width: 35px;
+  height: 35px;
+  border-radius: 35px;
+  -o-border-radius: 35px;
+  -moz-border-radius: 35px;
+  -webkit-border-radius: 35px;
+  overflow: hidden;
+  margin-right: 10px;
+}
+/* line 30, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact .photo-container img {
+  width: 100%;
+  display: block;
+}
+/* line 35, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact .content {
+  overflow: hidden;
+}
+/* line 37, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact .content .name {
+  color: #ffffff;
+  font-size: 1.2rem;
+  font-weight: 700;
+  display: block;
+  float: left;
+  color: #4ad0c5;
+  margin: 0;
+}
+/* line 46, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact .content .date {
+  color: #ffffff;
+  font-size: 1.0rem;
+  font-weight: 500;
+  display: block;
+  float: right;
+  color: #8aa4a2;
+  margin: 0;
+}
+/* line 55, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact .content .text {
+  margin: 0;
+  color: #8aa4a2;
+  font-size: 1.2rem;
+}
+/* line 61, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact:hover {
+  background: #ecfff6;
+}
+/* line 64, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact.active {
+  background: #4ad0c5;
+}
+/* line 66, page_question_list.less */
+body.page-question-list .wrapper .dialogues .contacts .contact.active .content p {
+  color: #ffffff;
+}
+/* line 73, page_question_list.less */
+body.page-question-list .wrapper .dialogue {
+  float: right;
+  width: 58%;
+  margin-top: 20px;
+  padding: 0;
+}
+/* line 78, page_question_list.less */
+body.page-question-list .wrapper .dialogue .head {
+  background: #f8f8f8;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 5px 20px;
+  border: solid 1px #d2ded9;
+  border-radius: 5px 5px 0 0;
+  -o-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  -webkit-border-radius: 5px 5px 0 0;
+}
+/* line 88, page_question_list.less */
+body.page-question-list .wrapper .dialogue .head h3.contact-name {
+  color: #35504e;
+  font-size: 1.4rem;
+  font-weight: 500;
+  display: block;
+  float: left;
+}
+/* line 95, page_question_list.less */
+body.page-question-list .wrapper .dialogue .head .contact-menu {
+  float: right;
+  margin-top: 10px;
+}
+/* line 100, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 0px 20px;
+  border: solid 1px #d2ded9;
+  max-height: 630px;
+}
+/* line 106, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages p.day {
+  text-align: center;
+  display: block;
+  line-height: 0;
+  margin: 10px 0;
+  border-top: solid 1px #8aa4a2;
+}
+/* line 112, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages p.day span {
+  padding: 0 10px;
+  background: #ffffff;
+  font-size: 1.1rem;
+}
+/* line 118, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages .message {
+  width: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 10px 0;
+  cursor: pointer;
+}
+/* line 125, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages .message .photo-container {
+  float: left;
+  width: 35px;
+  height: 35px;
+  border-radius: 35px;
+  -o-border-radius: 35px;
+  -moz-border-radius: 35px;
+  -webkit-border-radius: 35px;
+  overflow: hidden;
+  margin-right: 10px;
+}
+/* line 135, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages .message .photo-container img {
+  width: 100%;
+  display: block;
+}
+/* line 140, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages .message .content {
+  overflow: hidden;
+}
+/* line 142, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages .message .content .author {
+  color: #ffffff;
+  font-size: 1.2rem;
+  font-weight: 700;
+  display: block;
+  float: left;
+  color: #4ad0c5;
+  margin: 0;
+}
+/* line 151, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages .message .content .message-menu {
+  float: right;
+}
+/* line 154, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages .message .content .text {
+  margin: 5px 0 10px 0;
+  color: #8aa4a2;
+  font-size: 1.2rem;
+}
+/* line 159, page_question_list.less */
+body.page-question-list .wrapper .dialogue .messages .message .content .date {
+  color: #ffffff;
+  font-size: 1.0rem;
+  font-weight: 500;
+  display: block;
+  color: #8aa4a2;
+  margin: 0;
+}
 /*# sourceMappingURL=styles.css.map */
